add denim jacket

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ReWear – Community Clothing Exchange</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -31,7 +31,7 @@
 
   <section class="items-section">
     <div class="item-card">
-      <img src="https://in.pinterest.com/pin/307792955788531814/" alt="Denim Jacket" />
+      <img src="C:\raval meet\Hackathon" alt="Denim Jacket" />
       <h2>Denim Jacket</h2>
       <p>M · Delhi</p>
     </div>
