--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
     <div class="cta-buttons">
       <button class="primary">List an Item</button>
       <button class="secondary">Browse Swaps</button>
+      <button>sign in</button>
     </div>
   </section>
 
   <section class="items-section">
     <div class="item-card">
-      <img src="C:\raval meet\Hackathon" alt="Denim Jacket" />
+      <img src="C:\raval meet\Hackathon\ReWear-Solution\jacket.jpeg" alt="Denim Jacket" />
       <h2>Denim Jacket</h2>
       <p>M · Delhi</p>
     </div>
     <div class="item-card">
-      <img src="https://via.placeholder.com/300x300?text=Green+Dress" alt="Green Dress" />
+      <img src="C:\raval meet\Hackathon\ReWear-Solution\dress2.jpeg" alt="Green Dress" />
       <h2>Green Dress</h2>
       <p>S · Mumbai</p>
     </div>
     <div class="item-card">
-      <img src="https://via.placeholder.com/300x300?text=Striped+Shirt" alt="Striped Shirt" />
+      <img src="C:\raval meet\Hackathon\ReWear-Solution\shirt.jpeg" alt="Striped Shirt" />
       <h2>Striped Shirt</h2>
       <p>L · Bengaluru</p>
     </div>
     <div class="item-card">
-      <img src="https://via.placeholder.com/300x300?text=Beige+Cardigan" alt="Beige Cardigan" />
+      <img src="C:\raval meet\Hackathon\ReWear-Solution\shirt2.jpeg" alt="Beige Cardigan" />
       <h2>Beige Cardigan</h2>
       <p>M · Kolkata</p>
     </div>
