--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="cta-buttons">
       <button class="primary">List an Item</button>
       <button class="secondary">Browse Swaps</button>
-      <button>sign in</button>
+      <button>Login</button>
+      <button>Sign-in</button>
     </div>
   </section>
 
@@ -50,6 +51,7 @@
       <img src="C:\raval meet\Hackathon\ReWear-Solution\shirt2.jpeg" alt="Beige Cardigan" />
       <h2>Beige Cardigan</h2>
       <p>M · Kolkata</p>
+    
     </div>
   </section>
 
