--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
     <div class="cta-buttons">
       <button class="primary">List an Item</button>
       <button class="secondary">Browse Swaps</button>
-      <button>Login</button>
+      <button onclick="">Login</button>
       <button>Sign-in</button>
     </div>
   </section>
 
   <section class="items-section">
     <div class="item-card">
-      <img src="C:\raval meet\Hackathon\ReWear-Solution\jacket.jpeg" alt="Denim Jacket" />
+      <img src="jacket.jpeg" alt="Denim Jacket" />
       <h2>Denim Jacket</h2>
       <p>M · Delhi</p>
     </div>
     <div class="item-card">
-      <img src="C:\raval meet\Hackathon\ReWear-Solution\dress2.jpeg" alt="Green Dress" />
+      <img src="dress2.jpeg" alt="Green Dress" />
       <h2>Green Dress</h2>
       <p>S · Mumbai</p>
     </div>
     <div class="item-card">
-      <img src="C:\raval meet\Hackathon\ReWear-Solution\shirt.jpeg" alt="Striped Shirt" />
+      <img src="shirt.jpeg" alt="Striped Shirt" />
       <h2>Striped Shirt</h2>
       <p>L · Bengaluru</p>
     </div>
     <div class="item-card">
-      <img src="C:\raval meet\Hackathon\ReWear-Solution\shirt2.jpeg" alt="Beige Cardigan" />
+      <img src="shirt2.jpeg" alt="Beige Cardigan" />
       <h2>Beige Cardigan</h2>
       <p>M · Kolkata</p>
     
