--- a/Items/index.html
+++ b/Items/index.html
@@ -37,8 +37,7 @@
       <label for="city">City</label>
       <input type="text" id="city" placeholder="Enter city" />
 
-      <label for="imageUrl">Image URL</label>
-      <input type="url" id="imageUrl" placeholder="https://example.com/image.jpg" />
+      <input type="file" name="cloth-image" id="cloth-image" accept="image/*">
 
       <button type="submit">+ Add Item</button>
     </form>
