--- a/Login Page/index.html
+++ b/Login Page/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Page</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
             <input type="password" id="password" required />
         </div>
         <button type="submit">Login</button>
-        <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+        <p class="signup-link">Don't have an account? <a href="../Sign-up Page/index.html">Sign up</a></p>
         </form>
     </div>
   </div>
