--- a/Sign-up Page/index.html
+++ b/Sign-up Page/index.html
@@ -41,7 +41,7 @@
     </form>
 
     <p style="margin-top: 1rem;">
-      Already have an account? <a href="#">Sign In</a>
+      Already have an account? <a href="../Login Page/index.html">Log In</a>
     </p>
   </section>
 
@@ -50,6 +50,6 @@
   </footer>
 
   <!-- External JS -->
-  <script src="signup.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
