--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -27,8 +27,8 @@
     <div class="cta-buttons">
       <button class="primary">List an Item</button>
       <button class="secondary">Browse Swaps</button>
-      <button> <a href="Login Page/index.html">Login</a></button>
-      <button><a href="Sign-up Page/index.html">Sign Up</a></button>
+      <button> <a href="../Login Page/index.html">Login</a></button>
+      <button><a href="../Sign-up Page/index.html">Sign Up</a></button>
     </div>
   </section>
 
