--- a/Sign-up Page/index.html
+++ b/Sign-up Page/index.html
@@ -25,8 +25,8 @@
     <h1>Create Your ReWear Account</h1>
 
     <form class="signin-form" id="signupForm">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required />
+      <label for="username">Mobile</label>
+      <input type="tel" id="username" name="username" required />
 
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required />
@@ -38,11 +38,12 @@
       <input type="password" id="confirm-password" name="confirm-password" required />
 
       <button class="primary" type="submit">Sign Up</button>
-    </form>
 
-    <p style="margin-top: 1rem;">
-      Already have an account? <a href="../Login Page/index.html">Log In</a>
+      <p style="margin-top: 1rem;">
+      Already have an account? <a class="link" href="../Login Page/index.html">Log In</a>
     </p>
+
+    </form>
   </section>
 
   <footer>
