--- a/Items/index.html
+++ b/Items/index.html
@@ -14,8 +14,8 @@
       <div class="logo">👕 ReWear</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">My Items</a></li>
+          <li><a href="../Home Page/dress.jpeg">Home</a></li>
+          <li><a href="../Items/index.html">My Items</a></li>
           <li><a href="#">Requests</a></li>
         </ul>
       </nav>
