--- a/Sign-up Page/index.html
+++ b/Sign-up Page/index.html
@@ -13,8 +13,8 @@
       <div class="logo">👕 ReWear</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">My Items</a></li>
+          <li><a href="../Home Page/index.html">Home</a></li>
+          <li><a href="../Items/index.html">My Items</a></li>
           <li><a href="#">Requests</a></li>
         </ul>
       </nav>
